--- a/ProceduralDungeon(SFML)/ProceduralDungeon(SFML).vcxproj.filters
+++ b/ProceduralDungeon(SFML)/ProceduralDungeon(SFML).vcxproj.filters
@@ -51,6 +51,9 @@
     <ClCompile Include="Guntrap.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Razer.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Block.h">
@@ -84,6 +87,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="Guntrap.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="Razer.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
