--- a/ProceduralDungeon(SFML)/ProceduralDungeon(SFML).vcxproj
+++ b/ProceduralDungeon(SFML)/ProceduralDungeon(SFML).vcxproj
@@ -128,6 +128,7 @@
     <ClCompile Include="Block.cpp" />
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Content.cpp" />
+    <ClCompile Include="DebugInformation.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="GameCamera.cpp" />
     <ClCompile Include="GameInterface.cpp" />
@@ -148,6 +149,7 @@
     <ClInclude Include="Block.h" />
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="Content.h" />
+    <ClInclude Include="DebugInformation.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="GameCamera.h" />
     <ClInclude Include="GameInterface.h" />
