--- a/ProceduralDungeon(SFML)/ProceduralDungeon(SFML).vcxproj
+++ b/ProceduralDungeon(SFML)/ProceduralDungeon(SFML).vcxproj
@@ -130,8 +130,10 @@
     <ClCompile Include="Content.cpp" />
     <ClCompile Include="DebugInformation.cpp" />
     <ClCompile Include="Entity.cpp" />
+    <ClCompile Include="FPSMonitor.cpp" />
     <ClCompile Include="GameCamera.cpp" />
     <ClCompile Include="GameInterface.cpp" />
+    <ClCompile Include="GlobalValues.cpp" />
     <ClCompile Include="Guntrap.cpp" />
     <ClCompile Include="Blade.cpp" />
     <ClCompile Include="HealthBar.cpp" />
@@ -141,7 +143,9 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Sublevel.cpp" />
+    <ClCompile Include="UIDebugInfo.cpp" />
     <ClCompile Include="UIPicture.cpp" />
+    <ClCompile Include="UIText.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h" />
@@ -151,8 +155,10 @@
     <ClInclude Include="Content.h" />
     <ClInclude Include="DebugInformation.h" />
     <ClInclude Include="Entity.h" />
+    <ClInclude Include="FPSMonitor.h" />
     <ClInclude Include="GameCamera.h" />
     <ClInclude Include="GameInterface.h" />
+    <ClInclude Include="GlobalValues.h" />
     <ClInclude Include="Guntrap.h" />
     <ClInclude Include="Blade.h" />
     <ClInclude Include="HealthBar.h" />
@@ -161,7 +167,9 @@
     <ClInclude Include="Level.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Sublevel.h" />
+    <ClInclude Include="UIDebugInfo.h" />
     <ClInclude Include="UIPicture.h" />
+    <ClInclude Include="UIText.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
